// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrgRow renders correctly 1`] = `
<div>
  <tr
    data-css-156syk=""
  >
    <td>
      <span>
        <em>
          Name not set
        </em>
      </span>
    </td>
    <td
      class="css-a2hn0y"
    />
    <td />
  </tr>
</div>
`;

exports[`OrgRow status indicators  status: error renders correctly 1`] = `
<div>
  <tr
    data-css-156syk=""
  >
    <td>
      <span>
        <em>
          Name not set
        </em>
      </span>
    </td>
    <td
      class="css-a2hn0y"
    >
      <span
        class="error"
        role="status"
      >
        <i
          class="fa fa-times"
        />
         Error
      </span>
    </td>
    <td />
  </tr>
</div>
`;

exports[`OrgRow status indicators  status: loading renders correctly 1`] = `
<div>
  <tr
    data-css-156syk=""
  >
    <td>
      <span>
        <em>
          Name not set
        </em>
      </span>
    </td>
    <td
      class="css-a2hn0y"
    >
      <span
        class="loading"
        role="status"
      >
        <i
          class="fa fa-spinner fa-spin"
        />
         Saving
      </span>
    </td>
    <td />
  </tr>
</div>
`;

exports[`OrgRow status indicators  status: saved renders correctly 1`] = `
<div>
  <tr
    data-css-156syk=""
  >
    <td>
      <span>
        <em>
          Name not set
        </em>
      </span>
    </td>
    <td
      class="css-a2hn0y"
    >
      <span
        class="success"
        role="status"
      >
        <i
          class="fa fa-check-circle"
        />
         Saved
      </span>
    </td>
    <td />
  </tr>
</div>
`;

exports[`OrgRow with JudgeTeam with edit permissions renders correctly 1`] = `
<div>
  <tr
    data-css-156syk=""
  >
    <td>
      <span>
        Lilly Schumm III
      </span>
    </td>
    <td
      class="css-5en2de"
    >
      <div
        class=""
      >
        <div
          class="cf-form-dropdown dropdown-priorityCaseDistribution-1"
        >
          <label
            class="question-label usa-sr-only"
            for="priority-case-distribution-1"
            id="priority-case-distribution-1-label"
          >
            <span>
              priorityCaseDistribution-1
            </span>
          </label>
          <div
            class="cf-select"
          >
            <div
              class=" css-2b097c-container"
            >
              <div
                class="cf-select__control css-yk16xz-control"
              >
                <div
                  class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                >
                  <div
                    class="cf-select__single-value css-1uccc91-singleValue"
                  >
                    All cases
                  </div>
                  <div
                    class="css-81nyic-Input"
                  >
                    <div
                      class="cf-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-labelledby="priority-case-distribution-1-label"
                        aria-owns="priority-case-distribution-1-listbox"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="priority-case-distribution-1"
                        role="combobox"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="priorityCaseDistribution-1"
                type="hidden"
                value="all"
              />
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      class="css-5en2de"
    >
      <div
        class=""
      >
        <div
          class="cf-form-dropdown dropdown-requestedDistribution-1"
        >
          <label
            class="question-label usa-sr-only"
            for="requested-distribution-1"
            id="requested-distribution-1-label"
          >
            <span>
              requestedDistribution-1
            </span>
          </label>
          <div
            class="cf-select"
          >
            <div
              class=" css-2b097c-container"
            >
              <div
                class="cf-select__control css-yk16xz-control"
              >
                <div
                  class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                >
                  <div
                    class="cf-select__single-value css-1uccc91-singleValue"
                  >
                    All cases
                  </div>
                  <div
                    class="css-81nyic-Input"
                  >
                    <div
                      class="cf-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-labelledby="requested-distribution-1-label"
                        aria-owns="requested-distribution-1-listbox"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="requested-distribution-1"
                        role="combobox"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="requestedDistribution-1"
                type="hidden"
                value="all"
              />
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      class="css-a2hn0y"
    />
    <td>
      <a
        href="/org-0/users"
      >
        <span>
          <button
            class="usa-button-secondary usa-button"
            id="button-Org-Admin-Page"
            type="button"
          >
            Org Admin Page
          </button>
        </span>
      </a>
    </td>
  </tr>
</div>
`;

exports[`OrgRow with JudgeTeam without edit permissions renders correctly 1`] = `
<div>
  <tr
    data-css-156syk=""
  >
    <td>
      <span>
        Lilly Schumm III
      </span>
    </td>
    <td
      class="css-5en2de"
    >
      <div
        class=""
      >
        <div
          class="cf-form-dropdown dropdown-priorityCaseDistribution-1"
        >
          <label
            class="question-label usa-sr-only"
            for="priority-case-distribution-1"
            id="priority-case-distribution-1-label"
          >
            <span>
              priorityCaseDistribution-1
            </span>
          </label>
          <div
            class="cf-select"
          >
            <div
              class="cf-select--is-disabled css-14jk2my-container"
            >
              <div
                class="cf-select__control cf-select__control--is-disabled css-1fhf3k1-control"
              >
                <div
                  class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                >
                  <div
                    class="cf-select__single-value cf-select__single-value--is-disabled css-107lb6w-singleValue"
                  >
                    All cases
                  </div>
                  <input
                    aria-autocomplete="list"
                    class="css-62g3xt-dummyInput"
                    disabled=""
                    id="priority-case-distribution-1"
                    readonly=""
                    tabindex="0"
                    value=""
                  />
                </div>
                <div
                  class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="cf-select__indicator-separator css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      class="css-5en2de"
    >
      <div
        class=""
      >
        <div
          class="cf-form-dropdown dropdown-requestedDistribution-1"
        >
          <label
            class="question-label usa-sr-only"
            for="requested-distribution-1"
            id="requested-distribution-1-label"
          >
            <span>
              requestedDistribution-1
            </span>
          </label>
          <div
            class="cf-select"
          >
            <div
              class="cf-select--is-disabled css-14jk2my-container"
            >
              <div
                class="cf-select__control cf-select__control--is-disabled css-1fhf3k1-control"
              >
                <div
                  class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                >
                  <div
                    class="cf-select__single-value cf-select__single-value--is-disabled css-107lb6w-singleValue"
                  >
                    All cases
                  </div>
                  <input
                    aria-autocomplete="list"
                    class="css-62g3xt-dummyInput"
                    disabled=""
                    id="requested-distribution-1"
                    readonly=""
                    tabindex="0"
                    value=""
                  />
                </div>
                <div
                  class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="cf-select__indicator-separator css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      class="css-a2hn0y"
    />
    <td>
      <a
        href="/org-0/users"
      >
        <span>
          <button
            class="usa-button-secondary usa-button"
            id="button-Org-Admin-Page"
            type="button"
          >
            Org Admin Page
          </button>
        </span>
      </a>
    </td>
  </tr>
</div>
`;

exports[`OrgRow with VSO renders correctly 1`] = `
<div>
  <tr
    data-css-156syk=""
  >
    <td>
      <div
        class="cf-form-textinput   "
      >
        <div
          class="input-container"
        >
          <input
            aria-label="Name-1"
            class="cf-form-textinput"
            id="Name-1"
            name="Name-1"
            type="text"
            value="Schaden - Russel"
          />
        </div>
      </div>
    </td>
    <td>
      <div
        class="cf-form-textinput   "
      >
        <div
          class="input-container"
        >
          <input
            aria-label="URL-1"
            class="cf-form-textinput"
            id="URL-1"
            name="URL-1"
            type="text"
            value="schaden---russel"
          />
        </div>
      </div>
    </td>
    <td>
      <div
        class="cf-form-textinput   "
      >
        <div
          class="input-container"
        >
          <input
            aria-label="BGS Participant ID-1"
            class="cf-form-textinput"
            id="BGS Participant ID-1"
            name="BGS Participant ID-1"
            type="text"
            value="2779976"
          />
        </div>
      </div>
    </td>
    <td>
      <span>
        <button
          class="usa-button-secondary usa-button"
          id="1"
          type="button"
        >
          Update
        </button>
      </span>
    </td>
    <td
      class="css-a2hn0y"
    />
    <td>
      <a
        href="/org-0/users"
      >
        <span>
          <button
            class="usa-button-secondary usa-button"
            id="button-Org-Admin-Page"
            type="button"
          >
            Org Admin Page
          </button>
        </span>
      </a>
    </td>
  </tr>
</div>
`;
